--- a/style.css
+++ b/style.css
@@ -80,14 +80,12 @@ body{
     margin: 4px 0;
     display: flex;
     align-items: center;
-}
-
-#todos-box .todo-list-item *{
-    margin: 0 4px;
+    padding: 0 2px;
 }
 
 #todos-box .todo-list-item button{
     background-color: transparent;
+    cursor: pointer;
 }
 
 #todos-box .todo-list-item textarea{
