--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     border: none;
     outline: none;
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 body{
@@ -78,9 +80,15 @@ body{
     width: 100%;
     background: white;
     margin: 4px 0;
-    display: flex;
+    display: inline-flex;
     align-items: center;
-    padding: 0 2px;
+    padding: 8px;
+    gap: 2%;
+}
+
+#todos-box .todo-list-item .drag-grip .fa-grip-lines-vertical{
+    color: chocolate;
+    font-size: 24px;
 }
 
 #todos-box .todo-list-item button{
@@ -91,18 +99,11 @@ body{
 #todos-box .todo-list-item .todo-text,
 #todos-box .todo-list-item textarea{
     width: 100%;
-    margin: 0;
     background-color: transparent;
-} 
-
-#todos-box .todo-list-item textarea{
-    padding: 0 4px;
 }
 
 #todos-box .todo-list-item .todo-text p{
     color: chocolate;
-    margin: 4px;
-    padding: 4px;
 }
 
 
