--- a/style.css
+++ b/style.css
@@ -1,130 +1,137 @@
-*{
-    border: none;
-    outline: none;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+	border: none;
+	outline: none;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
-body{
-    background: url('./background.jpg') center center/cover no-repeat;
-    height: 100vh;
+body {
+	background: url('./background.jpg') center center/cover no-repeat;
+	height: 100vh;
 }
 
-.container{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 45%;
-    height: 70%;
-    max-height: 95vh;
-    border-radius: 0.5rem;
-    background-color: rgba(250, 244, 185, 0.313);
-    backdrop-filter: blur(1rem);
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+.container {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 45%;
+	height: 70%;
+	max-height: 95vh;
+	border-radius: 0.5rem;
+	background-color: rgba(250, 244, 185, 0.313);
+	backdrop-filter: blur(1rem);
+	display: flex;
+	align-items: center;
+	flex-direction: column;
 }
 
-.container > div, .container > form{
-    width: 95%;
+.container > div,
+.container > form {
+	width: 95%;
 }
 
-
-.container h1{
-    font-size: 2.5rem;
-    color: white;
-    text-shadow: 0 0 5px chocolate;
-    margin: 15px 0;
+.container h1 {
+	font-size: 2.5rem;
+	color: white;
+	text-shadow: 0 0 5px chocolate;
+	margin: 15px 0;
 }
 
-#todo-creater-form{
-    background-color: white;
-    height: 2.5rem;
-    display: flex;
-    border-radius: 4px 4px 0 0 ;
+#todo-creater-form {
+	background-color: white;
+	height: 2.5rem;
+	display: flex;
+	border-radius: 4px 4px 0 0;
 }
 
-#todo-creater-form input{
-    flex: 0.7;
-    border-radius: 4px 0 0;
-    padding: 12px;
-    color: chocolate;
-    font-size: 1rem;
+#todo-creater-form input {
+	flex: 0.7;
+	border-radius: 4px 0 0;
+	padding: 12px;
+	color: chocolate;
+	font-size: 1rem;
 }
 
-#todo-creater-form button{
-   flex: 0.3;
-    font-weight: bold;
-    color: white;
-    font-size: 1rem;
-    cursor: pointer;
-    background-color: chocolate;
-    border-radius: 0 4px 0 0;
+#todo-creater-form button {
+	flex: 0.3;
+	font-weight: bold;
+	color: white;
+	font-size: 1rem;
+	cursor: pointer;
+	background-color: chocolate;
+	border-radius: 0 4px 0 0;
 }
 
-#todos-box{
-    flex: 1;
-    margin: 0.5rem 0 1rem;
-    overflow: scroll;
-    border-radius: 0 0 4px 4px;
-    background-color: rgba(228, 228, 228, 0.501);
-    display: flex;
-    flex-direction: column; 
-    align-items: center;
-    padding: 10px;    
+#todos-box {
+	flex: 1;
+	margin: 0.5rem 0 1rem;
+	overflow: scroll;
+	border-radius: 0 0 4px 4px;
+	background-color: rgba(228, 228, 228, 0.501);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 10px;
 }
 
-#todos-box .todo-list-item{
-    width: 100%;
-    background: white;
-    margin: 4px 0;
-    display: inline-flex;
-    align-items: center;
-    padding: 8px;
-    gap: 2%;
+#todos-box .todo-list-item {
+	width: 100%;
+	background: white;
+	margin: 4px 0;
+	display: inline-flex;
+	align-items: center;
+	padding: 8px;
+	gap: 2%;
 }
 
-#todos-box .todo-list-item .drag-grip .fa-grip-lines-vertical{
-    color: chocolate;
-    font-size: 24px;
+#todos-box .todo-list-item.dragging {
+	background-color: rgba(255, 255, 255, 0.69);
+	backdrop-filter: blur(30px);
 }
 
-#todos-box .todo-list-item button{
-    background-color: transparent;
-    cursor: pointer;
+#todos-box .todo-list-item .drag-grip {
+	cursor: move;
+}
+
+#todos-box .todo-list-item .drag-grip .fa-grip-lines-vertical {
+	color: chocolate;
+	font-size: 24px;
+}
+
+#todos-box .todo-list-item button {
+	background-color: transparent;
+	cursor: pointer;
 }
 
 #todos-box .todo-list-item .todo-text,
-#todos-box .todo-list-item textarea{
-    width: 100%;
-    background-color: transparent;
+#todos-box .todo-list-item textarea {
+	width: 100%;
+	background-color: transparent;
 }
 
-#todos-box .todo-list-item .todo-text p{
-    color: chocolate;
+#todos-box .todo-list-item .todo-text p {
+	color: chocolate;
 }
 
-
-#todos-box .todo-list-item .todo-text p.mark-done{
-    text-decoration: line-through;
+#todos-box .todo-list-item .todo-text p.mark-done {
+	text-decoration: line-through;
 }
 
-#clear-todo{
-    background: transparent;
-    text-decoration: underline;
-    font-size: 1rem;
-    color: yellow;
-    text-shadow: 0 0 5px chocolate;
-    font-weight: bold;  
-    cursor: pointer;
-    margin-bottom: 10px;
+#clear-todo {
+	background: transparent;
+	text-decoration: underline;
+	font-size: 1rem;
+	color: yellow;
+	text-shadow: 0 0 5px chocolate;
+	font-weight: bold;
+	cursor: pointer;
+	margin-bottom: 10px;
 }
 
-
-@media(max-width: 768px){
-    .container{
-        width: 90%;
-    }
+@media (max-width: 768px) {
+	.container {
+		width: 90%;
+	}
 }
